# yew-trunk

./: Cargo.toml  index.scss
src/: main.rs
