[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew.git"}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yewtil = { version = "0.4", features = [ "future" ]}
futures = "0.3"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.55"
features = [
    'Window',
    'console',
    'Blob',
    'Navigator',
    'MediaDevices',
    'AudioContext',
    'MediaRecorder',
    'MediaStream',
    'MediaRecorderOptions',
    'AudioDestinationNode',
    'RecordingState',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'OscillatorNode',
    'OscillatorType',
    'MediaStreamConstraints'
]
